--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,25 @@ zsdoc/data
 !/tests/_output/.gitkeep
 
 zprofile.private
+### Vim
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+
+packer_compiled.lua
