--- a/.gitignore
+++ b/.gitignore
@@ -46,28 +46,23 @@ spotify-tui
 *.ko
 *.obj
 *.elf
-
 # Linker output
 *.ilk
 *.map
 *.exp
-
 # Precompiled Headers
 *.gch
 *.pch
-
 # Libraries
 *.lib
 *.a
 *.la
 *.lo
-
 # Shared objects (inc. Windows DLLs)
 *.dll
 *.so
 *.so.*
 *.dylib
-
 # Executables
 *.exe
 *.out
@@ -75,13 +70,11 @@ spotify-tui
 *.i*86
 *.x86_64
 *.hex
-
 # Debug files
 *.dSYM/
 *.su
 *.idb
 *.pdb
-
 # Kernel Module Compile Results
 *.mod*
 *.cmd
@@ -90,37 +83,28 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-
 ### Zsh
 # Zsh compiled script + zrecompile backup
 *.zwc
 *.zwc.old
-
 # Zsh completion-optimization dumpfile
 *zcompdump*
-
 # Zsh zcalc history
 .zcalc_history
-
 # A popular plugin manager's files
 ._zinit
 .zinit_lstupd
-
 # zdharma/zshelldoc tool's files
 zsdoc/data
-
 # robbyrussell/oh-my-zsh/plugins/per-directory-history plugin's files
 # (when set-up to store the history in the local directory)
 .directory_history
-
 # MichaelAquilina/zsh-autoswitch-virtualenv plugin's files
 # (for Zsh plugins using Python)
 .venv
-
 # Zunit tests' output
 /tests/_output/*
 !/tests/_output/.gitkeep
-
 zprofile.private
 ### Vim
 # Swap
@@ -130,11 +114,9 @@ zprofile.private
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
 [._]sw[a-p]
-
 # Session
 Session.vim
 Sessionx.vim
-
 # Temporary
 .netrwhist
 *~
@@ -142,5 +124,5 @@ Sessionx.vim
 tags
 # Persistent undo
 [._]*.un~
-
 packer_compiled.lua
+.gdb_history
