--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@ set-option -sa terminal-overrides ",xterm-256color:RGB:smcup@:rmcup@"
 set-option -g focus-events on
 set-option -sg escape-time 0
 
-set-option -g -q mouse on
+set-option -g -q mouse off
 bind -n F2 set-option -g -q mouse off \; display " Mouse: OFF "
 bind -n C-F2 set-option -g -q mouse on \; display " Mouse: On "
 
