--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,16 @@ bind j select-pane -t +1
 setw -g mode-keys vi
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i"
 
+## Clipboard integration
+# ctrl+c to send to clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# ctrl+v to paste from clipboard
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# Selection with mouse should copy to clipboard right away, in addition to the default action.
+unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+
 set-option -g default-shell /usr/bin/zsh
 
 bind '"' split-window -c "#{pane_current_path}"
