--- a/spotifyd/spotifyd.conf
+++ b/spotifyd/spotifyd.conf
@@ -1,13 +1,13 @@
 # vim: set filetype=toml :
 
 [global]
-username_cmd = "pass entertainment/accounts.spotify.com | sed -n 2p | awk '{print $2}'"
-password_cmd = "pass entertainment/accounts.spotify.com | sed -n 1p"
+username = "samdopa"
+password_cmd = "pass spotify-samdopa"
 use_mpris = true
 backend = "pulseaudio"
 mixer = "PCM"
-bitrate = 160
+bitrate = 320
 no_audio_cache = true
 initial_volume = "69" # nice
 zeroconf_port = 1234
-device_type = "speaker"
+device_type = "computer"
